trying to make cli

--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "linkedin bot for connecting Human Resources",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
+  },
+  "bin": {
+    "linkedin-bot": "/bin/index.js"
   },
   "repository": {
     "type": "git",
@@ -29,7 +32,14 @@
   },
   "homepage": "https://github.com/mr-internetix/linkedin-bot#readme",
   "dependencies": {
+    "boxen": "^7.0.0",
+    "chalk": "^5.1.2",
     "dotenv": "^16.0.3",
-    "puppeteer": "^19.0.0"
+    "email-prompt": "^0.4.0",
+    "ink": "^3.2.0",
+    "inquirer": "^9.1.4",
+    "ora": "^6.1.2",
+    "puppeteer": "^19.0.0",
+    "react": "^17.0.2"
   }
 }
